wow, that was painful. boot_load_config is now an mmadt obj that parameterizes the boot loader. easy-peasy for native archs. for esp32, had to learn about allocated a shared stack independent of the provided stack as loop stack is too small for the parsing process. however, now defining the boot completely in terms fo mmadt will allow for OTA network-based OS configruations (no re-flashing will be needed).

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ boards_dir = board
 [general]
 build_flags =
     -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
+    -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=10
 
 [mmadt]
 build_flags =
@@ -27,6 +28,7 @@ large_code = board/partition/large_code.csv
 
 [log]
 build_flags =
+    -DFOS_LOGGING=TRACE
     -DCONFIG_LOG_DEFAULT_LEVEL_VERBOSE=1
     -DCONFIG_LOG_MASTER_LEVEL=1
 
@@ -57,13 +59,12 @@ build_flags =
     -DFOS_EXTERNAL_MEMORY_LIMIT=${this.auto_psalloc_bytes}
     -DCONFIG_SPIRAM_CACHE_WORKAROUND=1
     -mfix-esp32-psram-cache-issue
+    -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=10
 
 [memory]
-stack_size = 8096
+stack_size = 30192
 build_flags =
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
-    -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
-    -DSET_LOOP_TASK_STACK_SIZE=${this.stack_size}
+    -DCONFIG_ARDUINO_LOOP_STACK_SIZE=${this.stack_size}
     -DFOS_ESP_THREAD_STACK_SIZE=16192
     -DFOS_ESP_FIBER_STACK_SIZE=8096
 
@@ -117,6 +118,7 @@ build_unflags =
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
+    #${log.build_flags}
     ${mmadt.build_flags}
     ${wifi.build_flags}
     ${memory.build_flags}
@@ -208,7 +210,6 @@ build_flags =
 [env:esp32-s3-pro]
 extends = esp32
 board = lolin_s3_pro
-stack_size = 4096
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
