use_custom_stack is generalized to native and esp architectures. boot_config_objs value id is specified in the obj definition using the at operator. added merge inst functionality to str.

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,9 +62,8 @@ build_flags =
     -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=10
 
 [memory]
-stack_size = 30192
 build_flags =
-    -DCONFIG_ARDUINO_LOOP_STACK_SIZE=${this.stack_size}
+    -DCONFIG_ARDUINO_LOOP_STACK_SIZE=8096
     -DFOS_ESP_THREAD_STACK_SIZE=16192
     -DFOS_ESP_FIBER_STACK_SIZE=8096
 
