fixed a long time bug around path schemas and recurssive resolutions where segments were being interpreted as schemas. router is now configured via the boot_config obj.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -137,8 +137,7 @@
             MAKE_TESTS(language/mmadt "test_mmadt_compiler;test_mmadt_parser;test_mmadt_inst" true)
             MAKE_TESTS(language/processor "test_processor" true)
             # MAKE_TESTS(process "test_scheduler;test_process" true)
-            MAKE_TESTS(structure "test_structure" true)
-            # MAKE_TESTS(structure/router "test_router" true)
+            MAKE_TESTS(structure "test_router;test_structure" true)
             # MAKE_TESTS(structure/stype/key_value "test_heap" , true)
             # IF(BUILD_MQTT_TESTS)
             #     MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
