isolated the obj print functions in obj and console. now any module can access pretty printing, nesting, colorized printing, etc. gutted more Options as that global class is going away.

--- a/platformio.ini
+++ b/platformio.ini
@@ -67,6 +67,10 @@ build_flags =
     -DFOS_ESP_THREAD_STACK_SIZE=16192
     -DFOS_ESP_FIBER_STACK_SIZE=8096
 
+[debug]
+build_flags =
+    -DCONFIG_ESP_SYSTEM_PANIC_GDBSTUB=1
+
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
 ######################################
@@ -91,6 +95,7 @@ build_flags =
 
 [esp32]
 platform = espressif32
+#build_type = debug
 #upload_flags = --no-stub
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
@@ -99,6 +104,7 @@ monitor_dir = scripts
 monitor_filters =
     ${env.monitor_filters}
     esp32_exception_decoder
+    debug
 lib_ignore =
     ESP8266Scheduler
 test_build_src = yes
@@ -117,6 +123,7 @@ build_unflags =
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
+    ${debug.build_flags}
     #${log.build_flags}
     ${mmadt.build_flags}
     ${wifi.build_flags}
