rewrote file system using the latest structure API. code dropped to near nothing. only have a LittleFS implementation for microprocessors implemented.

--- a/platformio.ini
+++ b/platformio.ini
@@ -190,14 +190,14 @@ lib_deps =
 #    fastled/FastLED@^3.8.0
 # dvarrel/ESPping@^1.0.4
 # lennarthennigs/ESP Telnet@^2.2.1
-extends = serial # or ota
+extends = serial # ota
 
 [serial]
 upload_protocol = esptool
 
 [ota]
 upload_protocol = espota
-upload_port = 192.168.88.224
+upload_port = 192.168.10.149
 
 ###########################################
 ################## ESP32 ##################
