added arduino i2c support. nice model in which the i2c obj is passed to i2c devices as the bus reference. i2c obj supports searching for pins and scanning the address space for devices.

--- a/platformio.ini
+++ b/platformio.ini
@@ -110,7 +110,8 @@ lib_ignore =
 test_build_src = yes
 test_ignore =
     test_main
-    test_basic
+    test/test_basic.cpp
+    test_basic.cpp
     structure/test_furi_boost
     structure/stype/mqtt/test_mqtt
     model/test_fs
