have the various esp32 structures (both of which shuold really be processes) using the new Structure creation/importation api.

--- a/platformio.ini
+++ b/platformio.ini
@@ -117,8 +117,9 @@ test_ignore =
     model/test_fs
 build_src_filter =
     +<**/*>
-    -<test/test_basic.cpp>
-    -<test/structure/test_furi_boost.cpp>
+    -<model/kilo/kilo.cpp>
+    -<../test/test_basic.cpp>
+    -<../test/structure/test_furi_boost.cpp>
 build_unflags =
     #-fno-rtti
     ${common.build_unflags}
