--- a/platformio.ini
+++ b/platformio.ini
@@ -63,9 +63,8 @@ build_flags =
 
 [memory]
 build_flags =
-    -DCONFIG_ARDUINO_LOOP_STACK_SIZE=8096
+    -DARDUINO_LOOP_STACK_SIZE=16192
     -DFOS_ESP_THREAD_STACK_SIZE=16192
-    -DFOS_ESP_FIBER_STACK_SIZE=8096
 
 [debug]
 build_flags =
@@ -98,6 +97,12 @@ platform = espressif32
 #build_type = debug
 #upload_flags = --no-stub
 upload_speed = 921600
+platform_packages = 
+    tool-esp32partitiontool@https://github.com/serifpersia/esp32partitiontool/releases/download/v1.4.4/esp32partitiontool-platformio.zip
+extra_scripts =
+    ${env.extra_scripts}
+    pre:scripts/partition_manager.py
+    # pre:scripts/fs_mount.py
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
 monitor_dir = scripts
@@ -179,7 +184,6 @@ test_framework = unity
 extra_scripts =
     pre:scripts/environment.py
     pre:scripts/exclude_native_source.py
-# pre:scripts/fs_mount.py
 lib_deps =
     WiFi
     ArduinoOTA
@@ -208,6 +212,7 @@ extends = esp32
 upload_flags = --no-stub
 board = lolin_s2_mini
 board_build.partitions = ${partition.large_code}
+board_upload.flash_size = 4MB
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
@@ -217,6 +222,8 @@ build_flags =
 [env:esp32-s3-pro]
 extends = esp32
 board = lolin_s3_pro
+board_upload.flash_size = 16MB
+board_build.partitions = board/partition/large_code_16mb.csv
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
@@ -227,6 +234,7 @@ build_flags =
 [env:esp32-s3-r8]
 extends = esp32
 board = waveshare_esp32s3r8
+board_upload.flash_size = 16MB
 upload_flags = --no-stub
 build_flags =
     ${esp32.build_flags}
@@ -247,6 +255,8 @@ build_flags =
 [env:esp32-t7-s3]
 extends = esp32
 board = lilygo_t7_s3
+board_build.partitions = board/partition/large_code_16mb.csv
+board_upload.flash_size = 16MB
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
@@ -257,6 +267,7 @@ build_flags =
 [env:esp32-s3-geek]
 extends = esp32
 board = waveshare_esp32s3_geek
+board_upload.flash_size = 4MB
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
