more refactoring and organzing.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ boards_dir = board
 [general]
 build_flags =
     -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
-    -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=10
+    -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=15
 
 [mmadt]
 build_flags =
@@ -59,7 +59,6 @@ build_flags =
     -DFOS_EXTERNAL_MEMORY_LIMIT=${this.auto_psalloc_bytes}
     -DCONFIG_SPIRAM_CACHE_WORKAROUND=1
     -mfix-esp32-psram-cache-issue
-    -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=10
 
 [memory]
 build_flags =
@@ -129,6 +128,7 @@ build_unflags =
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
+    ${general.build_flags}
     ${debug.build_flags}
     #${log.build_flags}
     ${mmadt.build_flags}
