--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -142,13 +142,13 @@
             MAKE_TESTS(language "test_obj" true)
             MAKE_TESTS(language/mmadt "test_mmadt_compiler;test_mmadt_parser;test_mmadt_inst" true)
             MAKE_TESTS(language/processor "test_processor" true)
+            MAKE_TESTS(model/fos/util "test_poll" true)
             MAKE_TESTS(process "test_scheduler" true)
             MAKE_TESTS(structure "test_router;test_structure" true)
             MAKE_TESTS(structure/stype "test_heap;test_fs" true)
-            # MAKE_TESTS(structure/stype/key_value "test_heap" , true)
-            # IF(BUILD_MQTT_TESTS)
-            #     MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
-            # ENDIF()
+            IF(FALSE AND BUILD_MQTT_TESTS) # mqtt isn't loading properly
+                MAKE_TESTS(structure/stype "test_mqtt" true)
+            ENDIF()
             MAKE_TESTS(. "test_main;test_furi;test_kernel" true)
             # MAKE_TESTS(model "test_fs" true)
             MAKE_TESTS(util "test_string_helper" true)
