this is a big one. finally got to the bottom of the panic exceptions in esp around thread/mutex. in the netheregions of a mailing list, it was stated that std mutex is unstable with esp32. as such, a std mutex shim was written that uses freertos semaphore infrastructure to implement equivalent semantics (save shared lock which is implemented as a full guard). now the threading infrastructure is stable. have fthread and fmutex as the exposed interfaces for the respective backend processors to implement. very basic api. restructed the boot loader giving more precedence to fos types as they are starting to form the brackground of every subsystem. stubbed the beggining the q processors for structures.

--- a/platformio.ini
+++ b/platformio.ini
@@ -100,6 +100,7 @@ platform_packages =
     tool-esp32partitiontool@https://github.com/serifpersia/esp32partitiontool/releases/download/v1.4.4/esp32partitiontool-platformio.zip
 extra_scripts =
     ${env.extra_scripts}
+    pre:scripts/rename_elf.py
     pre:scripts/partition_manager.py
     # pre:scripts/fs_mount.py
 test_speed = ${this.monitor_speed}
