down the craziest rabbit hole trying to get fmt library working for both native and esp processors. wow, that sucked. the test suite doesn't build due to some CMake nonsense that I will figure out later.

--- a/platformio.ini
+++ b/platformio.ini
@@ -89,7 +89,7 @@ build_flags =
     -DFOS_MACHINE_ARCH=$PIOENV
     -DFOS_MACHINE_MODEL=$BOARD
     -DFOS_MACHINE_SUBOS=$PIOFRAMEWORK/$PIOPLATFORM
-
+    -DFMT_HEADER_ONLY
 
 [esp32]
 platform = espressif32
@@ -193,6 +193,7 @@ lib_deps =
     FS
     LittleFS
     knolleary/PubSubClient@^2.8
+    extern/fmt-arduino-10.1.1
     # fastled/FastLED@^3.8.0
     # dvarrel/ESPping@^1.0.4
     # lennarthennigs/ESP Telnet@^2.2.1
