--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -28,6 +28,9 @@ jobs:
     - name: install include-what-you-use
       run: sudo apt-get install iwyu
 
+    - name: install gpiod.h
+      run: sudo apt-get install libgpiod-dev
+
     - name: install markdown-code-runner
       run: pip install markdown-code-runner
 
