lots of work on the fhatos code runner, css, python infrastructure, ...

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -47,6 +47,7 @@ IF(BUILD_DOCS)
     #####################################################################
     MESSAGE(CHECK_START "${.y}CMaking AsciiDoc Documentation${..}")
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/src/runner/fhatos-doc-code.py DESTINATION ${CMAKE_BINARY_DIR}/docs/build)
+    FILE(COPY ${CMAKE_SOURCE_DIR}/scripts/colors.py DESTINATION ${CMAKE_BINARY_DIR}/docs/build)
     ADD_CUSTOM_TARGET(asciidoc ALL DEPENDS main_runner boot_runner)
     SET(FILES ${CMAKE_SOURCE_DIR}/docs/fhatos.adoc)
     ADD_CUSTOM_COMMAND(TARGET asciidoc
