added minus and div ints. integated with most of the base types. a couple stil need to work out the algebra. added asciidoctor-tabs which is really nice for source example switching without taking up too much screen realesstate. put fos extnesion types into mmadt package -- been wantintng to do that for some time now.

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -56,7 +56,7 @@ IF(BUILD_DOCS)
     ADD_CUSTOM_COMMAND(TARGET asciidoc
             POST_BUILD
             WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/docs
-            COMMAND asciidoctor -o index.html ${FILES}
+            COMMAND asciidoctor -v -r asciidoctor-tabs -o index.html ${FILES}
             COMMENT "Evaluating asciidoctor: ${FILES}")
     UNSET(FILES)
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
