prototype of chain, choose instructions. fixed console clear bug. added conf option to console to show stack trace when an exception occurs. added dynamic cache resizing to distributed shared memmory.

--- a/platformio.ini
+++ b/platformio.ini
@@ -103,7 +103,7 @@ extra_scripts =
     pre:scripts/rename_elf.py
     pre:scripts/partition_manager.py
     # pre:scripts/fs_mount.py
-test_speed = ${this.monitor_speed}
+
 monitor_speed = ${common.monitor_speed}
 monitor_dir = scripts
 monitor_filters =
@@ -112,7 +112,12 @@ monitor_filters =
     debug
 lib_ignore =
     ESP8266Scheduler
-test_build_src = yes
+test_framework = doctest
+test_speed = ${this.monitor_speed}
+test_build_src = true
+test_build_project_src = true
+test_upload = true
+test_filter = test_furi_2
 test_ignore =
     test_main
     test/test_basic.cpp
@@ -181,7 +186,6 @@ framework = arduino
 board_build.filesystem = littlefs
 #fs_mount_src = mmadt/common.mmadt
 #fs_mount_dst = data/fs/model/
-test_framework = unity
 extra_scripts =
     pre:scripts/environment.py
     pre:scripts/exclude_native_source.py
